--- a/src/components/global/navigation/navigation.scss
+++ b/src/components/global/navigation/navigation.scss
@@ -20,9 +20,10 @@ $animationDelay: 150ms;
     @apply flex flex-col bg-brand-green-dark;
 
     &__list {
-        @apply fixed inset-0 z-30 flex flex-col justify-center items-center bg-brand-green-dark px-6 py-8 overflow-hidden;
+        @apply fixed inset-0 z-30 block bg-brand-green border-brand-green-dark overflow-hidden;
         @apply origin-top duration-300 ease-in-out;
 
+        border-top-width: 102px;
         transform: translateY(-100%);
 
         body.navigation--shown & {
@@ -31,32 +32,33 @@ $animationDelay: 150ms;
     }
 
     &__item {
-        @apply relative opacity-0 -translate-x-48 origin-top duration-300 ease-in-out text-4xl;
+        @apply relative opacity-0 -translate-x-48 origin-top duration-300 ease-in-out text-2xl;
+        @apply border-b border-brand-green-light;
 
-        transition-property: transform, opacity;
+        // transition-property: transform, opacity;
 
-        @for $i from 1 through $navigationCount {
-            &:nth-child(#{$i}) {
-                transition-delay: $i * $animationDelay;
-            }
-        }
+        // @for $i from 1 through $navigationCount {
+        //     &:nth-child(#{$i}) {
+        //         transition-delay: $i * $animationDelay;
+        //     }
+        // }
 
         body.navigation--shown & {
             @apply opacity-100 translate-x-0;
         }
 
-        @screen md {
-            @apply text-base mx-2;
-        }
-
         > a {
-            @apply py-2 text-brand-yellow font-bold no-underline;
+            @apply block py-4 px-6 text-white font-normal no-underline;
 
             &:hover,
             &:focus,
             &:active {
-                @apply text-brand-yellow-light;
+                @apply text-brand-yellow;
             }
+        }
+
+        &--search {
+            @apply hidden;
         }
 
         &--active > a {
@@ -68,6 +70,10 @@ $animationDelay: 150ms;
     &__button {
         @apply z-40 order-first;
     }
+
+    .form--search {
+        @apply relative block top-0 transform-none border-b border-brand-green-light;
+    }
 }
 
 @screen lg {
@@ -75,7 +81,7 @@ $animationDelay: 150ms;
         @apply relative;
 
         &__list {
-            @apply relative p-0;
+            @apply relative p-0 border-0 bg-transparent;
             transition-property: none;
             transform: translateY(0);
 
@@ -85,7 +91,7 @@ $animationDelay: 150ms;
         }
 
         &__item {
-            @apply flex items-center opacity-100 ml-2 mr-1;
+            @apply flex items-center opacity-100 ml-2 mr-1 border-0;
             transition-property: none;
 
             &::before {
@@ -106,7 +112,7 @@ $animationDelay: 150ms;
             }
 
             > a {
-                @apply py-4 text-white font-normal uppercase tracking-wide;
+                @apply px-0 py-4 border-0 text-white text-base font-normal uppercase tracking-wide;
 
                 &:hover,
                 &:focus,
@@ -116,7 +122,7 @@ $animationDelay: 150ms;
             }
 
             &--search {
-                @apply mr-0;
+                @apply flex mr-0;
 
                 > a {
                     @apply text-brand-yellow-dark;
@@ -137,6 +143,10 @@ $animationDelay: 150ms;
         }
 
         &__button {
+            @apply hidden;
+        }
+
+        .form--search {
             @apply hidden;
         }
     }
